added mobile icons

--- a/index.html
+++ b/index.html
@@ -76,6 +76,25 @@
               >
             </li>
           </ul>
+          <div class="header__menu-container">
+            <button type="button" class="header__menu-btn">
+              <svg
+                class=""
+                width="40"
+                height="40"
+                aria-label="Переключатель мобильного мнею"
+              >
+                <use
+                  class="header__icon-close"
+                  href="./images/icons.svg#icon-mobile-close-menu"
+                ></use>
+                <use
+                  class="header__icon-menu"
+                  href="./images/icons.svg#icon-mobile-menu"
+                ></use>
+              </svg>
+            </button>
+          </div>
         </nav>
       </div>
     </header>
@@ -730,6 +749,7 @@
       </div>
     </div>
 
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
