--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@
             <li class="team-section__item">
               <img
                 class="team-section__img"
-                src="./images/WebStudio/igor.jpg"
+                srcset="
+                  ./images/WebStudio/igor-450.jpg 1x,
+                  ./images/WebStudio/igor-900.jpg 2x
+                "
+                src="./images/WebStudio/igor-450.jpg"
                 alt="Фото Ігора"
                 width="450"
                 height="460"
@@ -286,7 +290,11 @@
             <li class="team-section__item">
               <img
                 class="team-section__img"
-                src="./images/WebStudio/olga.jpg"
+                srcset="
+                  ./images/WebStudio/olga-450.jpg 1x,
+                  ./images/WebStudio/olga-900.jpg 2x
+                "
+                src="./images/WebStudio/olga-450.jpg"
                 alt="Фото Ольги"
                 width="450"
                 height="460"
@@ -353,7 +361,11 @@
             <li class="team-section__item">
               <img
                 class="team-section__img"
-                src="./images/WebStudio/mikola.jpg"
+                srcset="
+                  ./images/WebStudio/mikola-450.jpg 1x,
+                  ./images/WebStudio/mikola-900.jpg 2x
+                "
+                src="./images/WebStudio/mikola-450.jpg"
                 alt="Фото Миколи"
                 width="450"
                 height="460"
@@ -420,7 +432,11 @@
             <li class="team-section__item">
               <img
                 class="team-section__img"
-                src="./images/WebStudio/mishka.jpg"
+                srcset="
+                  ./images/WebStudio/mihaylo-450.jpg 1x,
+                  ./images/WebStudio/mihaylo-900.jpg 2x
+                "
+                src="./images/WebStudio/mihaylo-450.jpg"
                 alt="Фото Михайла"
                 width="450"
                 height="460"
