--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-1.jpg"
+                    srcset="
+                      ./images/portfolio/tehnokryak-450.jpg 1x,
+                      ./images/portfolio/tehnokryak-900.jpg 2x
+                    "
+                    src="./images/portfolio/tehnokryak-450.jpg"
                     alt="Технокряк вебсайт"
                     width="450"
                     height="294"
@@ -162,7 +166,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-2.jpg"
+                    srcset="
+                      ./images/portfolio/basketball-450.jpg 1x,
+                      ./images/portfolio/basketball-900.jpg 2x
+                    "
+                    src="./images/portfolio/basketball-450.jpg"
                     alt="Постер баскетбол"
                     width="450"
                     height="294"
@@ -190,7 +198,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-3.jpg"
+                    srcset="
+                      ./images/portfolio/seafood-450.jpg 1x,
+                      ./images/portfolio/seafood-900.jpg 2x
+                    "
+                    src="./images/portfolio/seafood-450.jpg"
                     alt="Лого ресторана"
                     width="450"
                     height="294"
@@ -217,7 +229,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-4.jpg"
+                    srcset="
+                      ./images/portfolio/headphones-450.jpg 1x,
+                      ./images/portfolio/headphones-900.jpg 2x
+                    "
+                    src="./images/portfolio/headphones-450.jpg"
                     alt="Навушники"
                     width="450"
                     height="294"
@@ -244,7 +260,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-5.jpg"
+                    srcset="
+                      ./images/portfolio/boxes-450.jpg 1x,
+                      ./images/portfolio/boxes-900.jpg 2x
+                    "
+                    src="./images/portfolio/boxes-450.jpg"
                     alt="Проект коробки"
                     width="450"
                     height="294"
@@ -271,7 +291,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-6.jpg"
+                    srcset="
+                      ./images/portfolio/inspiration-450.jpg 1x,
+                      ./images/portfolio/inspiration-900.jpg 2x
+                    "
+                    src="./images/portfolio/inspiration-450.jpg"
                     alt="Вебсайт на маке"
                     width="450"
                     height="294"
@@ -298,7 +322,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-7.jpg"
+                    srcset="
+                      ./images/portfolio/book-450.jpg 1x,
+                      ./images/portfolio/book-900.jpg 2x
+                    "
+                    src="./images/portfolio/book-450.jpg"
                     alt="Книга"
                     width="450"
                     height="294"
@@ -325,7 +353,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-8.jpg"
+                    srcset="
+                      ./images/portfolio/lab-450.jpg 1x,
+                      ./images/portfolio/lab-900.jpg 2x
+                    "
+                    src="./images/portfolio/lab-450.jpg"
                     alt="Брелок"
                     width="450"
                     height="294"
@@ -352,7 +384,11 @@
                 <div class="portfolio-section__thumb">
                   <img
                     class="portfolio-section__img"
-                    src="./images/portfolio/img-9.jpg"
+                    srcset="
+                      ./images/portfolio/business-450.jpg 1x,
+                      ./images/portfolio/business-900.jpg 2x
+                    "
+                    src="./images/portfolio/business-450.jpg"
                     alt="Додаток на ноутбуці"
                     width="450"
                     height="294"
