--- a/portfolio.html
+++ b/portfolio.html
@@ -135,17 +135,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/tehnokryak-450.jpg 1x,
-                      ./images/portfolio/tehnokryak-900.jpg 2x
-                    "
-                    src="./images/portfolio/tehnokryak-450.jpg"
-                    alt="Технокряк вебсайт"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/tehnokryak-450.jpg 1x,
+                        ./images/portfolio/tehnokryak-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/tehnokryak-354.jpg 1x,
+                        ./images/portfolio/tehnokryak-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/tehnokryak-370.jpg 1x,
+                        ./images/portfolio/tehnokryak-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/tehnokryak-450.jpg"
+                      alt="Технокряк вебсайт"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -164,17 +179,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/basketball-450.jpg 1x,
-                      ./images/portfolio/basketball-900.jpg 2x
-                    "
-                    src="./images/portfolio/basketball-450.jpg"
-                    alt="Постер баскетбол"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/basketball-450.jpg 1x,
+                        ./images/portfolio/basketball-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/basketball-354.jpg 1x,
+                        ./images/portfolio/basketball-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/basketball-370.jpg 1x,
+                        ./images/portfolio/basketball-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/basketball-450.jpg"
+                      alt="Постер баскетбол"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <div class="portfolio-section__overlay"></div>
                     <p class="portfolio-section__overlay-desc">
@@ -196,17 +226,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/seafood-450.jpg 1x,
-                      ./images/portfolio/seafood-900.jpg 2x
-                    "
-                    src="./images/portfolio/seafood-450.jpg"
-                    alt="Лого ресторана"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/seafood-450.jpg 1x,
+                        ./images/portfolio/seafood-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/seafood-354.jpg 1x,
+                        ./images/portfolio/seafood-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/seafood-370.jpg 1x,
+                        ./images/portfolio/seafood-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/seafood-450.jpg"
+                      alt="Лого ресторана"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -227,17 +272,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/headphones-450.jpg 1x,
-                      ./images/portfolio/headphones-900.jpg 2x
-                    "
-                    src="./images/portfolio/headphones-450.jpg"
-                    alt="Навушники"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/headphone-450.jpg 1x,
+                        ./images/portfolio/headphone-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/headphone-354.jpg 1x,
+                        ./images/portfolio/headphone-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/headphone-370.jpg 1x,
+                        ./images/portfolio/headphone-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/headphones-450.jpg"
+                      alt="Навушники"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -258,17 +318,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/boxes-450.jpg 1x,
-                      ./images/portfolio/boxes-900.jpg 2x
-                    "
-                    src="./images/portfolio/boxes-450.jpg"
-                    alt="Проект коробки"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/boxes-450.jpg 1x,
+                        ./images/portfolio/boxes-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/boxes-354.jpg 1x,
+                        ./images/portfolio/boxes-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/boxes-370.jpg 1x,
+                        ./images/portfolio/boxes-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/boxes-450.jpg"
+                      alt="Проект коробки"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -289,17 +364,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/inspiration-450.jpg 1x,
-                      ./images/portfolio/inspiration-900.jpg 2x
-                    "
-                    src="./images/portfolio/inspiration-450.jpg"
-                    alt="Вебсайт на маке"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/inspiration-450.jpg 1x,
+                        ./images/portfolio/inspiration-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/inspiration-354.jpg 1x,
+                        ./images/portfolio/inspiration-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/inspiration-370.jpg 1x,
+                        ./images/portfolio/inspiration-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/inspiration-450.jpg"
+                      alt="Вебсайт на маке"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -320,17 +410,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/book-450.jpg 1x,
-                      ./images/portfolio/book-900.jpg 2x
-                    "
-                    src="./images/portfolio/book-450.jpg"
-                    alt="Книга"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/book-450.jpg 1x,
+                        ./images/portfolio/book-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/book-354.jpg 1x,
+                        ./images/portfolio/book-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/book-370.jpg 1x,
+                        ./images/portfolio/book-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/book-450.jpg"
+                      alt="Книга"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -351,17 +456,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/lab-450.jpg 1x,
-                      ./images/portfolio/lab-900.jpg 2x
-                    "
-                    src="./images/portfolio/lab-450.jpg"
-                    alt="Брелок"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/lab-450.jpg 1x,
+                        ./images/portfolio/lab-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/lab-354.jpg 1x,
+                        ./images/portfolio/lab-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/lab-370.jpg 1x,
+                        ./images/portfolio/lab-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/lab-450.jpg"
+                      alt="Брелок"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -382,17 +502,32 @@
             <li class="portfolio-section__item">
               <a href="#" class="link">
                 <div class="portfolio-section__thumb">
-                  <img
-                    class="portfolio-section__img"
-                    srcset="
-                      ./images/portfolio/business-450.jpg 1x,
-                      ./images/portfolio/business-900.jpg 2x
-                    "
-                    src="./images/portfolio/business-450.jpg"
-                    alt="Додаток на ноутбуці"
-                    width="450"
-                    height="294"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/portfolio/business-450.jpg 1x,
+                        ./images/portfolio/business-900.jpg 2x
+                      "
+                      media="(max-width: 767px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/business-354.jpg 1x,
+                        ./images/portfolio/business-708.jpg 2x
+                      "
+                      media="(min-width: 768px)" />
+                    <source
+                      srcset="
+                        ./images/portfolio/business-370.jpg 1x,
+                        ./images/portfolio/business-740.jpg 2x
+                      "
+                      media="(min-width: 1200px)" />
+                    <img
+                      class="portfolio-section__img"
+                      src="./images/portfolio/business-450.jpg"
+                      alt="Додаток на ноутбуці"
+                      width="450"
+                      height="294"
+                  /></picture>
                   <div class="portfolio-section__overlay">
                     <p class="portfolio-section__overlay-desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
