--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="link header__link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header__item">
-              <a class="link header__link" href="#">Контакти</a>
+              <a class="link header__link" href="#footer">Контакти</a>
             </li>
           </ul>
 
@@ -631,7 +631,7 @@
 
     <!-- FOOTER -->
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container footer__group">
         <!-- ADDRESS -->
 
@@ -920,5 +920,6 @@
 
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/anchor-scroll.js"></script>
   </body>
 </html>
