--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
               >
             </li>
             <li class="header__item">
-              <a class="link header__link" href="#">Контакти</a>
+              <a class="link header__link" href="#footer">Контакти</a>
             </li>
           </ul>
 
@@ -552,7 +552,7 @@
 
     <!-- FOOTER -->
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container footer__group">
         <!-- ADDRESS -->
 
@@ -755,5 +755,6 @@
     </div>
 
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/anchor-scroll.js"></script>
   </body>
 </html>
